tests/baselines/reference/expandoFunctionExpressionsWithDynamicNames.errors.txt
expandoFunctionExpressionsWithDynamicNames.ts(6,1): error TS7022: 'expr[s]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
expandoFunctionExpressionsWithDynamicNames.ts(9,1): error TS7022: 'expr2[s]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== expandoFunctionExpressionsWithDynamicNames.ts (2 errors) ====
    // https://github.com/microsoft/TypeScript/issues/54809
    
    const s = "X";
    
    export const expr = () => {}
    expr[s] = 0
    ~~~~~~~~~~~
!!! error TS7022: 'expr[s]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    export const expr2 = function () {}
    expr2[s] = 0
    ~~~~~~~~~~~~
!!! error TS7022: 'expr2[s]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    